tests/ui/generic-const-items/inference-failure.stderr
error[E0282]: type annotations needed for `Option<_>`
  --> $DIR/inference-failure.rs:8:9
   |
LL |     let _ = NONE;
   |         ^   ---- type must be known at this point
   |
help: consider giving this pattern a type, where the type for type parameter `T` is specified
   |
LL |     let _: Option<T> = NONE;
   |          +++++++++++

error[E0282]: type annotations needed
  --> $DIR/inference-failure.rs:12:13
   |
LL |     let _ = IGNORE;
   |             ^^^^^^ cannot infer type for type parameter `T` declared on the constant `IGNORE`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
